fixed apply button spacing

--- a/home-styles.css
+++ b/home-styles.css
@@ -189,7 +189,7 @@ h3 {
   /*text-shadow:0px 1px 0px #2f6627;
 */  z-index: 1000;
   position: absolute;
-  top: 480px;
+  top: 540px;
   left: 450px;
 }
 
